--- a/jobq/templates/login.css
+++ b/jobq/templates/login.css
@@ -1,7 +1,7 @@
-body {
+/* body {
     background:url(/static/bg.jpg);
     font-family:'PT Sans',Helvetica, Arial, sans-serif;
    
        background-repeat: no-repeat;
        background-size:cover;
-    }
+    } */
