--- a/jobq/templates/login.html
+++ b/jobq/templates/login.html
@@ -9,7 +9,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <link href="login.css" rel="stylesheet">
 </head>
-<body> 
+<body style="background-image:url('/static/bg.jpg');background-repeat: no-repeat;
+background-size:cover;background-attachment: fixed;"> 
   <div class="container">
     <div class="row"></div>
         <div class="col-md-4 offset-md-4 ">
